packages/codemirror-workspace/css/default.css
:root {
  --color-cmw-error: #e03131;
  --color-cmw-warning: #fcc419;
  --color-cmw-information: #74c0fc;
  --color-cmw-hint: #fd7e14;
}

/* Gutter */
.cmw-gutter {
  width: 10px;
}

/*
 * Icons for completion item.
 * VSCode has icons for the folloing kinds:
 * - metohd/function
 * - variable
 * - field
 * - class
 * - interface
 * - module
 * - property
 * - value/enum
 * - reference
 * - keyword
 * - color
 * - unit
 * - snippet
 * - text
 * Icons used in VSCode is available at: https://github.com/microsoft/vscode-codicons
 * For now, we'll just use letters and some unicode symbols like CodeMirror v6.
 * https://github.com/codemirror/codemirror.next/blob/master/autocomplete/src/theme.ts
 */
.cmw-icon {
  font-size: 90%;
  width: 0.8em;
  display: inline-block;
  text-align: center;
  padding-right: 0.6em;
  opacity: 0.9;
}

.cmw-icon--function::after,
.cmw-icon--method::after {
  /* latin small letter f with hook (U+0192)  */
  content: "\0192";
}
.cmw-icon--variable::after {
  /* mathematical italic small x (U+1d465)  */
  content: "\1d465";
}
.cmw-icon--field::after {
  /* medium small white circle (U+26ac)  */
  content: "\26ac";
}
.cmw-icon--module::after {
  /* white square (U+25a1)  */
  content: "\25a1";
}
.cmw-icon--color::after {
  /* horizontal black hexagon (U+2b23)  */
  content: "\2b23";
}
.cmw-icon--value::after {
  content: "v";
}
.cmw-icon--enum::after,
.cmw-icon--enum-member::after {
  /* union (U+222a)  */
  content: "\222a";
}
.cmw-icon--interface::after {
  content: "I";
}
.cmw-icon--text::after {
  content: "abc";
  font-size: 50%;
  vertical-align: middle;
}
.cmw-icon--keyword::after {
  content: "k";
}
.cmw-icon--constructor::after,
.cmw-icon--class::after {
  content: "c";
}
.cmw-icon--property::after {
  content: "p";
}
.cmw-icon--constant::after {
  /* mathematical italic capital c (U+1d436)  */
  content: "\1d436";
}
.cmw-icon--type-parameter::after {
  content: "T";
}
.cmw-completion-icon--struct::after {
  /* white hexagon (U+2b21)  */
  content: "\2b21";
}
.cmw-icon--event::after,
.cmw-icon--unit::after,
.cmw-icon--snippet::after,
.cmw-icon--file::after,
.cmw-icon--reference::after,
.cmw-icon--folder::after,
.cmw-icon--operator::after,
.cmw-icon--unknown::after {
  /* dotted circle (U+25cc)  */
  content: "\25cc";
}

/* These are from SymbolKind */
.cmw-icon--namespace::after,
.cmw-icon--package::after,
.cmw-icon--string::after,
.cmw-icon--number::after,
.cmw-icon--boolean::after,
.cmw-icon--array::after,
.cmw-icon--object::after,
.cmw-icon--key::after,
.cmw-icon--null::after {
  /* dotted circle (U+25cc)  */
  content: "\25cc";
}

/* Completion item details shown on the right of completion popup. */
.cmw-completion-item-doc,
/* Hover Information and Signature Help */
.cmw-tooltip {
  background: #f8f9fa;
  color: #343a40;
  border: 1px solid #495057;
  border-radius: 2px;
  font-family: sans-serif;
  font-size: 12px;
  padding: 2px;
  z-index: 10;
  position: absolute;
  max-width: 50ch;
  max-height: 120px;
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
    0 2px 4px -1px rgba(0, 0, 0, 0.06);
}
.cmw-tooltip > div {
  overflow-y: auto;
}
.cmw-tooltip .cmw-tooltip-close {
  position: absolute;
  top: -8px;
  right: -12px;
  width: 18px;
  height: 18px;
  cursor: pointer;
  opacity: 0;
  padding: 2px;
  transition: opacity 0.1s ease-in-out;
}
.cmw-tooltip .cmw-tooltip-close::before {
  content: "×";
  display: block;
  width: 14px;
  height: 14px;
  font-size: 12px;
  line-height: 14px;
  text-align: center;
  border-radius: 8px;
  background-color: #495057;
  color: #f8f9fa;
}
.cmw-tooltip:hover .cmw-tooltip-close,
.cmw-tooltip:focus .cmw-tooltip-close,
.cmw-tooltip-close:hover {
  opacity: 1;
}

/* Markdown */
.cmw-completion-item-doc pre,
.cmw-tooltip pre,
.cmw-completion-item-doc p,
.cmw-tooltip p {
  margin: 4px 0;
}

.cmw-completion-item-doc pre,
.cmw-tooltip pre {
  max-width: 100%;
  overflow-x: auto;
}

/* Text Marker styles for Document Highlight */
.cmw-highlight {
  background-color: rgba(0, 0, 0, 0.1);
}

/* Text Marker styles for Diagnostics */
.cmw-mark-error {
  text-decoration: underline wavy var(--color-cmw-error);
}
.cmw-mark-warning {
  text-decoration: underline dashed var(--color-cmw-warning);
}
.cmw-mark-information {
  text-decoration: underline dotted var(--color-cmw-information);
}
.cmw-mark-hint {
  text-decoration: underline dotted var(--color-cmw-hint);
}

/* Gutter Marker Colors */
/* TODO We should make marks customizable, not just the color. */
.cmw-guttermark-error {
  color: var(--color-cmw-error);
}
.cmw-guttermark-warning {
  color: var(--color-cmw-warning);
}
.cmw-guttermark-information {
  color: var(--color-cmw-information);
}
.cmw-guttermark-hint {
  color: var(--color-cmw-hint);
}

/* Snippet completion */
.cmw-snippet-tabstop {
  text-decoration: dashed underline overline #495057;
}

.cmw-snippet-final-tabstop {
  border-left: 2px solid rgba(0, 0, 0, 0.6);
}

/* Context Menu */
.cmw-context-menu {
  font-family: sans-serif;
  font-size: 14px;
  padding: 0;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #495057;
  background-color: #f8f9fa;
  color: #495057;
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
    0 2px 4px -1px rgba(0, 0, 0, 0.06);
}
.cmw-context-menu-item {
  padding: 4px 8px;
  cursor: pointer;
}
.cmw-context-menu-item[disabled] {
  cursor: default;
}
.cmw-context-menu-item:not([disabled]):hover {
  background-color: #e9ecef;
  text-decoration: underline;
}
.cmw-context-menu-item-separator {
  border: 0;
  height: 1px;
  background-color: #495057;
  margin: 4px 8px;
}

/* Goto Symbols */
.cmw-document-symbols {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
  width: 30ch;
  z-index: 15;
}
.cmw-document-symbols-input {
  width: 100%;
  font-family: monospace;
  margin: auto;
  box-sizing: border-box;
  border: 1px solid #495057;
  background: #f8f9fa;
  color: #495057;
}
.cmw-document-symbols-list {
  background: #f8f9fa;
  color: #495057;
  z-index: 1000;
  font-family: monospace;
  font-size: 14px;
  overflow: auto;
  box-sizing: border-box;
  border: 1px solid #495057;
  border-top: none;
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
    0 2px 4px -1px rgba(0, 0, 0, 0.06);
}
.cmw-document-symbols-list > div {
  padding: 0 4px;
}
.cmw-document-symbols-list > div:hover,
.cmw-document-symbols-list > div.selected {
  background: #e9ecef;
  cursor: pointer;
}
.cmw-document-symbols-list .matched {
  color: #212529;
  font-weight: semi-bold;
}

